# bmp_image_processor

./: BmpImage.cpp  BmpImage.h  CMakeLists.txt  CompositeFilter.cpp  CompositeFilter.h  CropFilter.cpp  CropFilter.h  CustomException.cpp  CustomException.h  CustomFilter.cpp  CustomFilter.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  Filter.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  LICENSE  MatrixFilter.cpp  MatrixFilter.h  NegativeFilter.cpp  NegativeFilter.h  SharpeningFilter.cpp  SharpeningFilter.h  ThresholdFilter.cpp  ThresholdFilter.h  image_processor.cpp  test.cpp
